--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "^2.6.0",
     "@tauri-apps/plugin-opener": "^2",
-    "@tauri-apps/plugin-shell": "^2.3.5"
+    "@tauri-apps/plugin-shell": "^2.3.5",
+    "chart.js": "^4.5.1",
+    "lucide-svelte": "^0.575.0"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.6",
