--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-shell": "^2.3.5",
     "chart.js": "^4.5.1",
+    "highlight.js": "^11.11.1",
     "lucide-svelte": "^0.575.0"
   },
   "devDependencies": {
