--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,6 +24,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-shell = "2"
 tauri-plugin-dialog = "2"
+open = "5.3.3"
 
 [profile.dev]
 debug = false
